--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -10,7 +10,7 @@
                 <h5 class="card-title">{{ product.name }}</h5>
                 <p class="card-text text-info">{{ product.get_category_display }}</p>
                 <p class="card-text text-info">{{ product.price }} $ </p>
-                <a href="#" class="btn btn-primary">Description</a>
+                    <p><a href="{% url 'product_path' product.pk %}" class="btn btn-primary">Description</a></p>
                 </div>
             </div>
          </div>
