--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -15,6 +15,7 @@
     <div class="container">
         <ul class="nav nav-tabs">
             <li><a href="{% url 'index' %}">Home</a></li>
+            <li><a href="{% url 'product_add' %}">Add</a></li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                     <div class="dropdown-menu">
