--- a/source/webapp/templates/product_view.html
+++ b/source/webapp/templates/product_view.html
@@ -12,7 +12,7 @@
             <p class="info">Count: {{ product.count }}</p>
         </div>
     </div>
-{#        <p><a href="{% url 'edit_plan' plan.pk %}" class="btn btn-primary" >Edit</a></p>#}
+        <p><a href="{% url 'product_edit' product.pk %}" class="btn btn-primary" >Edit</a></p>
 {#        <p><a href="{% url 'delete_plan' plan.pk %}" class="btn btn-primary">Delete</a></p>#}
 {% endblock %}
 
