--- a/source/webapp/templates/partial/product_form.html
+++ b/source/webapp/templates/partial/product_form.html
@@ -5,13 +5,15 @@
    <p class="form-error">{{ error }}</p>
 {% endfor %}
 
+
 {% for field in form %}
-    <p><label class="fields" for="{{ field.id_for_label }}">{{ field.label }}
+
+        <p><label class="fields" for="{{ field.id_for_label}}">{{ field.label }}
         {% if field.field.required %}
             <span class="required">*</span>
         {% endif %}
     </label></p>
-    {% if field.errors %}
+        {% if field.errors %}
         <p>{{ field|add_class:'field-error form-control' }}</p>
     {% else %}
         <p>{{ field|add_class:'form-control' }}</p>
@@ -21,4 +23,4 @@
     {% endfor %}
 {% endfor %}
 
-<p class="text-center"><input type="submit" value="{{ button_text }}" class="btn btn-primary"></p>
+<p class="text-center"><input type="submit" value="{{ button_text }}" class="btn btn-secondary"></p>
